fixed #wrapper overflow which screwed up page layout on mobile devices during transitions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3480,6 +3480,7 @@
     #wrapper {
         -webkit-flex: 1 1 auto;
         flex: 1 1 auto;
+        overflow-x: hidden;
     }
 
 	#sidebar + #wrapper {
